syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message SInt32 {
    sint32 none = 1;

    sint32 lt  = 2 [(validate.rules).sint32.lt  = 5]; // x <  5
    sint32 lte = 3 [(validate.rules).sint32.lte = 5]; // x <= 5
    sint32 gt  = 4 [(validate.rules).sint32.gt  = 5]; // x >  5
    sint32 gte = 5 [(validate.rules).sint32.gte = 5]; // x >= 5

    sint32 lt_gt   = 6 [(validate.rules).sint32 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    sint32 lt_gte  = 7 [(validate.rules).sint32 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    sint32 lte_gt  = 8 [(validate.rules).sint32 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    sint32 lte_gte = 9 [(validate.rules).sint32 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    sint32 lt_gt_inv   = 10 [(validate.rules).sint32 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    sint32 lt_gte_inv  = 11 [(validate.rules).sint32 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    sint32 lte_gt_inv  = 12 [(validate.rules).sint32 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    sint32 lte_gte_inv = 13 [(validate.rules).sint32 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    sint32 in     = 14 [(validate.rules).sint32 = {in: [30, 35]}];
    sint32 not_in = 15 [(validate.rules).sint32 = {not_in: [40, 45]}];

    sint32 const = 16 [(validate.rules).sint32.const = 50];
}
